--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,8 @@ body {
 	height: 52px;
 	width: 142px;
 	overflow: hidden;
+	box-sizing:content-box;
+
 }
 
 .menu {
@@ -135,26 +137,122 @@ body {
 	font-size: 18px;
 }
 /*END HEADER*/
+
+/*Section services*/
+
 .services {
-	height: 1140px;
 	background-color: #34495e;
+	overflow: hidden;
+	padding-bottom: 115px;
 }
 
 .services h3 {
-	font-size: 30px;
+	font-family: 'Droid Serif', serif;
+	font-size: 40px;
 	font-weight: bold;
 	color: #ffffff;
 	text-align: center;
-	padding-top: 124px;
+	padding-top: 129px;
 	padding-bottom: 70px;
 }
 
 .text-services-about {
+	font-family: 'Droid Serif', serif;
 	margin-left: 252px;
-	margin-right: 272px;
-	font-size: 16px;
-	line-height: 18px;
+	margin-right: 252px;
+	font-size: 24px;
+	line-height: 30px;
 	color: #ffffff;
+	margin-bottom: 150px;
+}
 
+.list-services {
+	text-align: center;
+	
+}
+.list-services li {
+	display: inline-block;
+	width: 250px;
+	text-align: center;
+	margin: 30px;
 
 }
+
+.list-services h2 {
+	font-size: 26px;
+	font-weight: bold;
+	color: #ffffff;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.list-services span {
+	font-family: 'Droid Serif', serif;
+	color: #ffffff;
+	font-size: 20px;
+	line-height: 25px;
+}
+/* End Section services*/
+/*PORTFOLIO SECTION*/
+
+.portfolio {
+	background: #ffffff;
+}
+
+.portfolio h3 {
+	font-family: 'Droid Serif', serif;
+	font-size: 40px;
+	font-weight: bold;
+	color: #2c3e50;
+	text-align: center;
+	padding-top: 110px;
+	padding-bottom: 75px;
+}
+.nav {
+	margin-left: 340px;
+	padding-bottom: 102px;
+
+}
+.nav li {
+	font-size: 25px;
+	margin-right: 30px;	
+}
+
+.nav-tabs>li>a {
+	font-family:'Droid Sans', sans-serif;
+	color: #2c3e50;
+	border: 1px solid #2ecc71;
+	border-radius: 20px 20px 20px 20px;
+	border-color: transparent;
+}
+
+.nav-tabs>li.active > a, 
+.nav-tabs>li.active > a:focus, 
+.nav-tabs>li.active > a:hover {
+	cursor: default;
+	background-color: #2ecc71;
+	color: #ffffff;
+}
+
+.nav-tabs {
+	border-bottom: none;
+}
+
+.tab-pane {
+	margin: 0px 25px 0px 25px;
+}
+
+.portfolio-image {
+	float: left;
+	height: 260px;
+	width: 348px;
+	margin-left: 30px;
+    margin-top: 30px;
+    border: 1px solid #e9e9e9;
+    padding: 10px;
+    box-sizing: content-box;
+
+}
+
+
+/*PORTFOLIO SECTION END
